examples/positive/L3/type_diff_scope_2.ob
MODULE TypeDiffScope2;

TYPE FOO = INTEGER;

PROCEDURE foo;

  PROCEDURE bar;

    TYPE FOO = BOOLEAN;

    END bar;

  END foo;

END TypeDiffScope2.
