examples/negative/name_errors/L4/10_wrong_property_record.ob
MODULE WrongPropRecord;

TYPE RecordTest = RECORD
       foo: INTEGER
     END;

VAR x: RecordTest;

BEGIN
  x.bar := TRUE;
END WrongPropRecord.
